WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54976
Incorrect switch-case fall-through inside InspectorClientQt.cpp
https://bugs.webkit.org/show_bug.cgi?id=54976
Summary
Incorrect switch-case fall-through inside InspectorClientQt.cpp
Fabrizio
Reported
2011-02-22 11:28:39 PST
In function variantToSetting(), code falls through to next case if qvariant.type() is QVariant::Bool. This does not make sense since the QVariant::Bool case sets QString retval to "true" or "false". Falling through and executing the block under QVariant::String case would overwrite this value. The correct behavior is to break from the switch.
Attachments
Don't fall through case in variantToSetting() if qvariant.type() is Bool
(1.20 KB, patch)
2011-02-22 11:34 PST
,
Fabrizio
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fabrizio
Comment 1
2011-02-22 11:34:39 PST
Created
attachment 83353
[details]
Don't fall through case in variantToSetting() if qvariant.type() is Bool
Laszlo Gombos
Comment 2
2011-02-22 16:57:38 PST
Comment on
attachment 83353
[details]
Don't fall through case in variantToSetting() if qvariant.type() is Bool r=me.
WebKit Commit Bot
Comment 3
2011-02-22 23:14:10 PST
Comment on
attachment 83353
[details]
Don't fall through case in variantToSetting() if qvariant.type() is Bool Clearing flags on attachment: 83353 Committed
r79412
: <
http://trac.webkit.org/changeset/79412
>
WebKit Commit Bot
Comment 4
2011-02-22 23:14:15 PST
All reviewed patches have been landed. Closing bug.
Suresh Voruganti
Comment 5
2011-02-28 07:48:30 PST
Please cherry pick the fixes to Qtwebkit 2.1.x
Ademar Reis
Comment 6
2011-02-28 14:04:02 PST
Revision
r79412
cherry-picked into qtwebkit-2.1.x with commit 677fa11 <
http://gitorious.org/webkit/qtwebkit/commit/677fa11
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug