2011-02-22  Fabrizio Machado  <fabrizio.machado@nokia.com>

Reviewed by Laszlo Gombos.

        [Qt] Don't fall through case in variantToSetting() if qvariant.type() is Bool
        https://bugs.webkit.org/show_bug.cgi?id=54976

        Test not needed.

        * WebCoreSupport/InspectorClientQt.cpp:

Canonical link: https://commits.webkit.org/69332@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79412 268f45cc-cd09-0410-ab3c-d52691b4dbfc